# CloudXR_Client_Demo

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle  build_sdk.gradle
app/libs/: PvrSDK-Native-release.aar  oboe-1.6.0.aar
app/src/androidTest/java/com/picovr/cloudxr/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/picovr/cloudxrclientdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: frag.sh  vertex.sh
app/src/main/cpp/: CMakeLists.txt  CloudXRClient.cpp  CloudXRClient.h  native-lib.cpp  pvr_types.h  util.h
app/src/main/java/com/picovr/cloudxr/: MainActivity.java
app/src/main/java/com/picovr/cloudxrclientdemo/: JniInterface.java  MainActivity.java
app/src/main/java/com/picovr/cloudxrclientdemo/controller/: ControllerManager.java
app/src/main/java/com/picovr/cloudxrclientdemo/math/: CXRSensor.java
app/src/main/jni/: Android.mk  Application.mk
app/src/main/res/raw/: light_vertex.shader  passthrough_fragment.shader
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/src/: CloudXRClientPXR.cpp  CloudXRClientPXR.h  GLUtils.cpp  GLUtils.h  PxrHelper.h  graphicsplugin.h  graphicsplugin_opengles.cpp  main.cpp  util.h
app/src/test/java/com/picovr/cloudxr/: ExampleUnitTest.java
app/src/test/java/com/picovr/cloudxrclientdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libs/: README.md
libs/CloudXR/include/: CloudXRClient.h  CloudXRCommon.h  CloudXRInputEvents.h  README.md
(+4 files in other folders)
